Update Sensor Fusion paper

--- a/Research_on_water_status.tex
+++ b/Research_on_water_status.tex
@@ -2,9 +2,13 @@
 \usepackage{subfiles}
 \usepackage{lineno,hyperref}
 \usepackage{subfigure}
+\usepackage{fontspec}
 \usepackage{graphicx}
-% \modulolinenumbers5
+\usepackage{pgfplots}
 
+\biboptions{sort&compress}
+% \modulolinenumbers5
+\setmainfont{Times New Roman}
 \journal{TBD}
 
 \title{Research on water status detection method of high-power fuel cell system based on water balance model}
