--- a/Research_on_water_status_Chapters/Chapter3_Results.tex
+++ b/Research_on_water_status_Chapters/Chapter3_Results.tex
@@ -23,7 +23,7 @@ It is worth noting that when the load current is 120A, the impact of the working
 \end{figure}
 
 \par
-Fig \ref{fig:fig5a} shows that as the temperature rises, the water content in the hydrogen side exhaust gas generally shows a downward trend, and even at 120A/70℃, the water content in the hydrogen side exhaust gas is 0, the same result appears in 210A(fig \ref{fig:fig5b}) and 300A(fig \ref{fig:fig5c}). There are mainly two reasons for this phenomenon.  First, according to the principle of proton exchange membrane fuel cell reaction, the reaction product water is generated at the cathode (that is, the air side), and the fuel used by the fuel cell system is 99.99\% pure hydrogen. Therefore, the water inside the hydrogen side is mainly the water that migrates from the air side to the hydrogen side under the action of concentration diffusion and pressure diffusion. Since the hydrogen-air pressure difference is basically consistent (20kpa) during the experiment, the influence of pressure on water migration can be ignored when comparing. Second, the exhaust gas collected on the anode side needs to first pass through the water separator built into the fuel cell system to separate the unreacted hydrogen from the liquid water, and then it can be collected by the exhaust water collection device on the hydrogen side. And at higher working temperatures, the saturation vapor pressure of the gas on the hydrogen side rises, and the content of liquid water decreases relatively. These two factors cause the working temperature to rise and the water content flowing out of the hydrogen side to decrease.
+Fig \ref{fig:fig5a} shows that as the temperature rises, the water content in the hydrogen side exhaust gas generally shows a downward trend, and even at 120A/70$^{\circ}C$, the water content in the hydrogen side exhaust gas is 0, the same result appears in 210A(fig \ref{fig:fig5b}) and 300A(fig \ref{fig:fig5c}). There are mainly two reasons for this phenomenon.  First, according to the principle of proton exchange membrane fuel cell reaction, the reaction product water is generated at the cathode (that is, the air side), and the fuel used by the fuel cell system is 99.99\% pure hydrogen. Therefore, the water inside the hydrogen side is mainly the water that migrates from the air side to the hydrogen side under the action of concentration diffusion and pressure diffusion. Since the hydrogen-air pressure difference is basically consistent (20kpa) during the experiment, the influence of pressure on water migration can be ignored when comparing. Second, the exhaust gas collected on the anode side needs to first pass through the water separator built into the fuel cell system to separate the unreacted hydrogen from the liquid water, and then it can be collected by the exhaust water collection device on the hydrogen side. And at higher working temperatures, the saturation vapor pressure of the gas on the hydrogen side rises, and the content of liquid water decreases relatively. These two factors cause the working temperature to rise and the water content flowing out of the hydrogen side to decrease.
 
 \begin{figure}
 	\label{fig:figure5}
@@ -60,10 +60,10 @@ Compare the water flow out of the air side and the hydrogen side at 120A, 210A, 
 		\label{fig:fig6c}
 		\includegraphics{Research_pictures/fig6c.png}
 	}
-	\caption{Comparison of water flow rate flowing out of the air side under different air metering ratios (a:120A; b:210A; c:300A; vertical as water flow; horizontal as air flow rate; starting point from top to bottom is ordered by temperature: 63/65/68/70/73℃)}
+	\caption{Comparison of water flow rate flowing out of the air side under different air metering ratios (a:120A; b:210A; c:300A; vertical as water flow; horizontal as air flow rate; starting point from top to bottom is ordered by temperature: 63/65/68/70/73$^{\circ}C$)}
 \end{figure}
 \par
-For the hydrogen side, similarly, as the air metering ratio increases, the water flow out of the hydrogen side basically continues to decrease. After the above analysis, as the air metering ratio increases, the water stored in the cathode will be taken out of the stack by the high-speed airflow, and the water flow diffused to the hydrogen side through concentration difference becomes less, so relatively speaking, the water collected on the hydrogen side will become less. However, the degree of decline is different. Under low temperature (120A/60℃, 210A/60℃, and 300A/63℃), they all show a relatively gentle decline. As the temperature rises, the water flow out of the hydrogen side is also gradually affected by the air metering ratio
+For the hydrogen side, similarly, as the air metering ratio increases, the water flow out of the hydrogen side basically continues to decrease. After the above analysis, as the air metering ratio increases, the water stored in the cathode will be taken out of the stack by the high-speed airflow, and the water flow diffused to the hydrogen side through concentration difference becomes less, so relatively speaking, the water collected on the hydrogen side will become less. However, the degree of decline is different. Under low temperature (120A/60$^{\circ}C$, 210A/60$^{\circ}C$, and 300A/63$^{\circ}C$), they all show a relatively gentle decline. As the temperature rises, the water flow out of the hydrogen side is also gradually affected by the air metering ratio
 \begin{figure}
 	\label{fig:figure7}
 	\subfigure[]{
@@ -91,7 +91,7 @@ In formula \ref{eq9}, $m_(w,stk)$ is the water content inside the fuel cell, in 
 \par
 Although during the reaction process, under the effects of concentration diffusion and electro-osmotic drag, water at the cathode will migrate to the anode. However, the research object of the water balance method is the entire fuel cell, so the internal water migration process will not have an impact.
 \par
-Using the method described above, the rate of change of the water content inside the fuel cell system under different load currents, working temperatures, and air metering ratios can be calculated. In the process of making the graph, to maintain the integrity of the graph. We use (Load current/Temperature/Coefficient) as the format of test environment description. The data of (210A/55℃/1.8 ) and (210A/55℃/2.0) are replaced with (210A/55℃/2.2) test's data. The obtained results are compared as shown in Fig \ref{fig:fig8a}, Fig \ref{fig8b} and Fig \ref{fig:fig8c}, where positive values indicate an increase in water content (represented in blue), and negative values indicate a decrease in water content (represented in red). For the convenience of subsequent discussions, the blue part is defined as flooding, the red part is defined as drying, and the green part is defined as the normal state.
+Using the method described above, the rate of change of the water content inside the fuel cell system under different load currents, working temperatures, and air metering ratios can be calculated. In the process of making the graph, to maintain the integrity of the graph. We use (Load current/Temperature/Coefficient) as the format of test environment description. The data of (210A/55$^{\circ}C$/1.8 ) and (210A/55$^{\circ}C$/2.0) are replaced with (210A/55$^{\circ}C$/2.2) test's data. The obtained results are compared as shown in Fig \ref{fig:fig8a}, Fig \ref{fig8b} and Fig \ref{fig:fig8c}, where positive values indicate an increase in water content (represented in blue), and negative values indicate a decrease in water content (represented in red). For the convenience of subsequent discussions, the blue part is defined as flooding, the red part is defined as drying, and the green part is defined as the normal state.
 
 \begin{figure}
 	\label{fig:figure8}
@@ -110,7 +110,7 @@ Using the method described above, the rate of change of the water content inside
 	\caption{Comparison chart of internal water content of fuel cell system under different conditions (a:120A; b:210A; c:300A)}
 \end{figure}
 
-As can be seen from Fig \ref{fig:figure8}, under the same load current, as the working temperature increases and the air metering ratio increases, the rate of change of the water content inside the fuel cell system gradually decreases. When it is 120A/73℃/2.8, 210A/73℃/2.4, 300A/73℃/2.4, the rate of change of the water content inside the fuel cell system reaches the minimum value under this load current. However, the degree of influence of the working temperature and the air metering ratio on the rate of change of the water content inside the fuel cell system is slightly different. When the load current is 120A and 210A, too low working temperature is more likely to cause flooding than too low air metering ratio. For example, at 120A, when the working temperature is 55℃, even if the air metering ratio reaches 2.8, the fuel cell system is still in a relatively flooded state; and when the working temperature is 73℃, even if the air metering ratio is only 2.0, the fuel cell system is in a normal state. In a dry state, the degree of influence of working temperature and air metering ratio is not much different. However, when the load current is 310A, the trend is the opposite. Too low working temperature and too low air metering ratio will cause flooding, and too high air metering ratio is more likely to cause drying than too high working temperature.
+As can be seen from Fig \ref{fig:figure8}, under the same load current, as the working temperature increases and the air metering ratio increases, the rate of change of the water content inside the fuel cell system gradually decreases. When it is 120A/73$^{\circ}C$/2.8, 210A/73$^{\circ}C$/2.4, 300A/73$^{\circ}C$/2.4, the rate of change of the water content inside the fuel cell system reaches the minimum value under this load current. However, the degree of influence of the working temperature and the air metering ratio on the rate of change of the water content inside the fuel cell system is slightly different. When the load current is 120A and 210A, too low working temperature is more likely to cause flooding than too low air metering ratio. For example, at 120A, when the working temperature is 55$^{\circ}C$, even if the air metering ratio reaches 2.8, the fuel cell system is still in a relatively flooded state; and when the working temperature is 73$^{\circ}C$, even if the air metering ratio is only 2.0, the fuel cell system is in a normal state. In a dry state, the degree of influence of working temperature and air metering ratio is not much different. However, when the load current is 310A, the trend is the opposite. Too low working temperature and too low air metering ratio will cause flooding, and too high air metering ratio is more likely to cause drying than too high working temperature.
 
 \par
 Furthermore, this paper uses the method of linear regression to analyze the impact of working temperature and air metering ratio on the water content inside the fuel cell system. Before this, the data needs to be standardized. This paper uses the Z-score normalization method, which is
@@ -139,10 +139,10 @@ Similar to the phenomenon described above, the impact of the working temperature
 Therefore, to maintain the long-term stable operation of the fuel cell system, appropriate operating conditions need to be selected. The following principles should be considered when choosing:
 \begin{itemize}
 	\item The fuel cell system should be in a normal state under this condition;
-	\item In the actual operation process, there are certain fluctuations in the working temperature and air metering ratio. The fluctuation range of the working temperature is about ±2℃, and the fluctuation range of the air metering ratio is about ±0.1, so the selected conditions should make the points within the fluctuation range in a normal state;
+	\item In the actual operation process, there are certain fluctuations in the working temperature and air metering ratio. The fluctuation range of the working temperature is about $\pm2^{\circ}C$, and the fluctuation range of the air metering ratio is about$\pm0.1$, so the selected conditions should make the points within the fluctuation range in a normal state;
 	\item A larger air metering ratio and a lower working temperature will cause additional consumption of the auxiliary system, so try to choose working conditions with a low air metering ratio and a high working temperature.
 \end{itemize}
-As shown in Fig \ref{fig:figure9}, 120A/67℃/2.15, 210A/68℃/2.15, 300A/70℃/2.05 are selected as the appropriate operating conditions under each load current.
+As shown in Fig \ref{fig:figure9}, 120A/67$^{\circ}C$/2.15, 210A/68$^{\circ}C$/2.15, 300A/70$^{\circ}C$/2.05 are selected as the appropriate operating conditions under each load current.
 \begin{figure}
 	\label{fig:figure9}
 	\subfigure[]{
@@ -177,6 +177,6 @@ Next, compare the rate of change of the water content inside the fuel cell syste
 		\end{tabular}
 	\end{center}
 \end{table}
-From Table \ref{tab:StatisticalTable}, it can be seen that as the load current increases, the rate of change of the water content inside the fuel cell system increases to some extent, but the increase is not large. This may be because the higher the load current of the fuel cell, the more water flow is generated, so the water accumulated inside correspondingly increases. In addition, it was found that when the load current is 210A, the range is larger compared to 120A and 300A. Correspondingly, the fuel cell system cannot operate stably under the conditions of 210A/55℃/1.6 and 210A/55℃/1.8. This further reflects the connection between the rate of change of the internal water content of the fuel cell system and the water content fault.
+From Table \ref{tab:StatisticalTable}, it can be seen that as the load current increases, the rate of change of the water content inside the fuel cell system increases to some extent, but the increase is not large. This may be because the higher the load current of the fuel cell, the more water flow is generated, so the water accumulated inside correspondingly increases. In addition, it was found that when the load current is 210A, the range is larger compared to 120A and 300A. Correspondingly, the fuel cell system cannot operate stably under the conditions of 210A/55$^{\circ}C$/1.6 and 210A/55$^{\circ}C$/1.8. This further reflects the connection between the rate of change of the internal water content of the fuel cell system and the water content fault.
 \par
 However, the above calculation method can only calculate the absolute value of the water content inside the fuel cell system. The output performance of the fuel cell in actual operation is related to the working temperature, intake pressure, and air metering ratio. To find the most suitable working conditions under each load current, it is necessary to establish a fuel cell stack model, and study the correlation between the difference between the actual output and theoretical output of the fuel cell stack under different conditions and the absolute value of the water content inside the fuel cell system.
