--- a/Research_on_water_status_Chapters/Chapter4_Conclusion.tex
+++ b/Research_on_water_status_Chapters/Chapter4_Conclusion.tex
@@ -5,5 +5,5 @@ This study investigates the water content state of the high-power fuel cell syst
 \begin{description}
     \item [1] Under larger air metering ratios, elevated coolant inlet temperatures, and higher load currents, the water content in the exhaust gas on the air side is higher; conversely, under smaller air metering ratios, lower coolant inlet temperatures, and higher load currents, the water content in the exhaust gas on the hydrogen side is higher.
     \item [2] Under the same load current, as the working temperature and air metering ratio escalate, the rate of change of the water content inside the fuel cell system progressively decreases. However, the degree of influence of working temperature and air metering ratio on the rate of change of the water content inside the fuel cell system slightly varies. When the load current is 120A and 210A, the influence of working temperature is more pronounced; whereas, when the load current is 300A, the influence of the air metering ratio is more evident.
-    \item [3] With the amplification of load current, the rate of change of the water content inside the fuel cell system somewhat increases, but the increase is not substantial. Simultaneously, the range of the rate of change of the internal water content at 210A is greater than that at 120A and 300A, and the corresponding fuel cell system cannot operate stably under the conditions of 210A/55℃/1.6 and 210A/55℃/1.8. This further substantiates the correlation between the rate of change of the internal water content of the fuel cell system and the water content fault.
+    \item [3] With the amplification of load current, the rate of change of the water content inside the fuel cell system somewhat increases, but the increase is not substantial. Simultaneously, the range of the rate of change of the internal water content at 210A is greater than that at 120A and 300A, and the corresponding fuel cell system cannot operate stably under the conditions of 210A/55$^{\circ}C$/1.6 and 210A/55$^{\circ}C$/1.8. This further substantiates the correlation between the rate of change of the internal water content of the fuel cell system and the water content fault.
 \end{description}
