--- a/Sensor_Fusion.tex
+++ b/Sensor_Fusion.tex
@@ -34,6 +34,7 @@
 \subfile{Sensor_Fusion_chapters/nom.tex}
 \subfile{Sensor_Fusion_chapters/Intro.tex}
 \subfile{Sensor_Fusion_chapters/NumericalModelling.tex}
+\subfile{Sensor_Fusion_chapters/Observer.tex}
 \bibliographystyle{elsarticle-num}
 \bibliography{Sensor_Fusion_chapters/ref.bib}
 \end{document}
