--- a/Sensor_Fusion_chapters/NumericalModelling.tex
+++ b/Sensor_Fusion_chapters/NumericalModelling.tex
@@ -30,4 +30,5 @@ Then the steam flow at the stack inlet can be expressed as:
     Q_{n,g H_{2}O}^{c a,i n}=Q_{n,s u m}^{c a,i n}\cdot\frac{\varphi_{w A i n}^{c a,i n} \star p_{s a t}(r^{c a,i n})}{p_{s u m}^{c a,i n}}
 \end{equation}
 
-W
+Where $Q_{n,gH_2 O}^{ca,in}$  is the molar flow rate of steam at the cathode inlet (kmol/s), $\varphi_wAir^{ca,in}$ is the relative humidity at the cathode inlet, $p_sat (T^{ca,in})$ is the saturated vapor pressure of water under the gas temperature at the cathode inlet of $T^{ca,in}$ (K). 
+The oxygen flow at the stack inlet can be expressed as:
