--- a/Research_on_water_status.tex
+++ b/Research_on_water_status.tex
@@ -1,11 +1,13 @@
 \documentclass[preprint]{elsarticle}
 \usepackage{subfiles}
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage{lineno,hyperref}
-\usepackage{subfigure}
 \usepackage{fontspec}
 \usepackage{graphicx}
 \usepackage{pgfplots}
-
+\usepackage{makecell}
+% \usepackage{minipage}
 \biboptions{sort&compress}
 % \modulolinenumbers5
 \setmainfont{Times New Roman}
@@ -39,10 +41,11 @@
     PEMFC \sep water content \sep water balance\sep high power fuel cell system
 \end{keyword}
 \maketitle
-% \subfile{Research_on_water_status_Chapters/Chapter1_Introduction.tex}
-% \subfile{Research_on_water_status_Chapters/Chapter2_Experiment.tex}
+\subfile{Research_on_water_status_Chapters/Chapter1_Introduction.tex}
+\subfile{Research_on_water_status_Chapters/Chapter2_Experiment.tex}
 \subfile{Research_on_water_status_Chapters/Chapter3_Results.tex}
-% \subfile{Research_on_water_status_Chapters/Chapter4_Conclusion.tex}
+% \subfile{Research_on_water_status_Chapters/figures.tex}
+\subfile{Research_on_water_status_Chapters/Chapter4_Conclusion.tex}
 \bibliographystyle{elsarticle-num}
 \bibliography{Research_on_water_status_Chapters/ref.bib}
 \end{document}
