--- a/Research_on_water_status_Chapters/Chapter2_Experiment.tex
+++ b/Research_on_water_status_Chapters/Chapter2_Experiment.tex
@@ -9,7 +9,7 @@ The literature indicates that the factors that have the greatest impact on the w
 		\label{tab:WaterStateExperimentalParameterTable}
 		\begin{tabular}{l|c|r}
 			\hline
-			\textbf{Load current/A/currency density/$A·cm^{-2}$} & \textbf{Working temperature/$^{\circ}C$} & \textbf{Air metering ratio} \\
+			\textbf{\makecell{Load current(A) / \\currency density($A·cm^{-2}$)}}   & \textbf{Working temperature($^{\circ}C$)} & \textbf{Air metering ratio} \\
 			\hline
 			120/0.4                                         & 55,60,65,70,73                 & 2,2.2,2.4,2.6,2.8           \\
 			210/0.7                                         & 55,60,65,70,73                 & 1.8,2,2.2,2.4               \\
